# aind-lightsheet-mae

./: pyproject.toml
.codeocean/: environment.json
code/aind_lightsheet_mae/_shared/: __init__.py  types.py
code/aind_lightsheet_mae/dataset/: dataset.py  utils.py
code/aind_lightsheet_mae/io/: __init__.py  _io.py
environment/: Dockerfile
metadata/: metadata.yml
