[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "aind_lightsheet_mae"
description = "Masked autoencoder for mouse lightsheet images"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3"
]
dynamic = ["version", "readme"]

dependencies = [
  'torch==2.2.2',
  'zarr==2.16.1',
  'numpy==1.24.4',
  'pims==0.6.1',
  'tifffile==2023.7.10',
  'wandb==0.15.12',
  'lightning==2.1.0',
  'torchmetrics==1.2.0',
  'natsort==8.4.0'
]

[project.optional-dependencies]
dev = [
  'black',
  'coverage',
  'flake8',
  'interrogate',
  'isort',
  'pygit2',
  'Sphinx',
  'matplotlib==3.7.3',
]

[tool.setuptools.packages.find]
where = ["code"]

[tool.setuptools.dynamic]
version = {attr = "aind_lightsheet_mae.__version__"}
readme = {file = ["README.md"]}

[tool.black]
line-length = 79
target_version = ['py36']
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | build
    | dist
  )/
  | .gitignore
)
'''

[tool.coverage.run]
omit = ["*__init__*"]
source = ["aind_lightsheet_mae", "tests"]

[tool.coverage.report]
exclude_lines = ["if __name__ == .__main__.:"]
fail_under = 100

[tool.isort]
line_length = 79

[tool.interrogate]
exclude = ["setup.py", "docs", "build"]
fail-under = 80